# AKDATA

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
akdata/: __init__.py  ak.py  version.py
akdata/analysis/: __init__.py  eda.py  health_score.py  profiling.py  recommendations.py  statistics.py
akdata/core/: __init__.py  config.py  exceptions.py  orchestrator.py  pipeline.py
akdata/features/: __init__.py  engineering.py  selection.py
akdata/io/: __init__.py  csv.py  excel.py  json.py
akdata/preprocessing/: __init__.py  cleaning.py  datatype.py  duplicates.py  encoding.py  missing.py  outliers.py  scaling.py  transformers.py
akdata/split/: __init__.py  train_test.py
akdata/utils/: __init__.py  constants.py  helpers.py  logger.py
akdata/validation/: __init__.py  checker.py  leakage.py
docs/: developer_guide.md
examples/: quickstart.py
tests/: __init__.py  test_analysis.py  test_core.py  test_features.py  test_io.py  test_preprocessing.py  test_reports.py  test_split.py  test_validation.py
