[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akdata"
version = "1.0.0"
description = "An enterprise-grade, production-quality Python library for intelligent data preprocessing."
readme = "README.md"
requires-python = ">=3.10,<3.14"

authors = [
    { name = "Arikaran R", email = "arikaranr2410@gmail.com" }
]

license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.22.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
pdf = [
    "reportlab>=3.6.0"
]

test = [
    "pytest>=7.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["akdata*"]